--- a/src/WebDavSharp.App/appsettings.Development.json
+++ b/src/WebDavSharp.App/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "Filesystem": {
-    "SourcePath": "C:\\Users\\admin\\Desktop\\"
+    "SourcePath": "C:\\Users\\admin\\Desktop\\webdav"
   }
 }
